html accueil bis

--- a/html/accueil.html
+++ b/html/accueil.html
@@ -108,10 +108,10 @@
         <nav>
             <h3>ohmyfood</h3>
             <ul>
-                <p><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></p>
-                <p><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></p>
-                <p><a href="mentions_legales" Mentions légales></a></p>
-                <p><a href="mailto:ohmyfood@gmail.com">Contact</a></p>
+                <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+                <li><a href="mentions_legales">Mentions légales</a></li>
+                <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
             </ul>
         </nav>
      </footer>
