--- a/html/accueil.html
+++ b/html/accueil.html
@@ -7,6 +7,7 @@
   src="https://kit.fontawesome.com/f3cd396271.js"
   crossorigin="anonymous"
   ></script>
+  <link rel="stylesheet" href="../css/prefixed/style.css">
  </head>
  <body>
      <header>
@@ -42,14 +43,14 @@
          <main>
             <section class="restaurant">
                 <h2>Restaurants</h2>
-                <div class="nav_restaurant">
+                <div class="restaurant__nav">
                     <article class="article_restaurant">
                         <a href="menu_la_palette_du_gout.html">
-                            <div class="img_restaurant">
+                            <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
                                 <span class="nouveau">Nouveau</span>
                             </div>
-                                <div class="texte_restaurant">
+                                <div class="restaurant__texte">
                                     <h3>La palette du goût</h3>
                                     <p>Ménilmontant</p>
                                 <div class="like">
@@ -58,13 +59,13 @@
                             </div>  
                         </a>
                     </article>
-                    <article class="nav_restaurant">
+                    <article class="restaurant__nav">
                         <a href="menu_la_note_enchantée.html">
-                            <div class="img_restaurant">
+                            <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
                                 <span class="img__txt">Nouveau</span>
                             </div>
-                            <div class="texte_restaurant">
+                            <div class="restaurant__texte">
                                     <h3>La note enchantée</h3>
                                     <p>Charonne</p>
                                 <div>
@@ -73,12 +74,12 @@
                             </div>   
                         </a>
                     </article>
-                    <article class="nav_restaurant">
+                    <article class="restaurant__nav">
                         <a href="menu_a_la_française.html">
-                            <div class="img_restaurant">
+                            <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
                             </div>
-                            <div class="texte_restaurant">
+                            <div class="restaurant__texte">
                                     <h3>À la française</h3>
                                     <p>Cité Rouge</p>
                                 <div>
@@ -87,9 +88,9 @@
                             </div> 
                         </a>
                     </article>
-                    <article class="nav_restaurant">
+                    <article class="restaurant__nav">
                         <a href="menu_le_delice_des_sens.html">
-                            <div class="img_restaurant">
+                            <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
                             </div>
                             <div class="main_bloc_txt">
