--- a/html/accueil.html
+++ b/html/accueil.html
@@ -7,12 +7,12 @@
   src="https://kit.fontawesome.com/f3cd396271.js"
   crossorigin="anonymous"
   ></script>
-  <link rel="stylesheet" href="../css/prefixed/style.css">
+  <link rel="stylesheet" href="../css/style.css">
  </head>
  <body>
-     <header>
-         <h1>ohmyfood</h1>  
-         <div class="localisation">
+     <header class="header">
+         <h1 class="header__titre">ohmyfood</h1>  
+         <div class="header__localisation">
             <i class="fas fa-map-marker-alt"></i>
             <p>Paris, Belleville</p>
          </div>
@@ -21,7 +21,9 @@
          <section class="welcome">
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <div class="button button__welcome">Explorez nos restaurants</div>
+            <button class="welcome__button" type="button">       
+            Explorez nos restaurants
+            </button>
          </section>
          <section class="fonctionnement">
              <h2>Fonctionnement</h2>
@@ -40,15 +42,14 @@
                  </li>
             </ul>
          </section>
-         <main>
             <section class="restaurant">
                 <h2>Restaurants</h2>
                 <div class="restaurant__nav">
-                    <article class="article_restaurant">
+                    <article class="restaurant__article">
                         <a href="menu_la_palette_du_gout.html">
                             <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
-                                <span class="nouveau">Nouveau</span>
+                                <span class="restaurant__article--new">Nouveau</span>
                             </div>
                                 <div class="restaurant__texte">
                                     <h3>La palette du goût</h3>
@@ -59,11 +60,11 @@
                             </div>  
                         </a>
                     </article>
-                    <article class="restaurant__nav">
+                    <article class="restaurant__article">
                         <a href="menu_la_note_enchantée.html">
                             <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
-                                <span class="img__txt">Nouveau</span>
+                                <span class="restaurant__article--new">Nouveau</span>
                             </div>
                             <div class="restaurant__texte">
                                     <h3>La note enchantée</h3>
@@ -74,7 +75,7 @@
                             </div>   
                         </a>
                     </article>
-                    <article class="restaurant__nav">
+                    <article class="restaurant__article">
                         <a href="menu_a_la_française.html">
                             <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
@@ -88,12 +89,12 @@
                             </div> 
                         </a>
                     </article>
-                    <article class="restaurant__nav">
+                    <article class="restaurant__article">
                         <a href="menu_le_delice_des_sens.html">
                             <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
                             </div>
-                            <div class="main_bloc_txt">
+                            <div class="restaurant__texte">
                                     <h3>Le délice des sens</h3>
                                     <p>Folie-Méricourt</p>
                                 <div>
