--- a/html/accueil.html
+++ b/html/accueil.html
@@ -27,26 +27,35 @@
          </section>
          <section class="fonctionnement">
              <h2>Fonctionnement</h2>
-             <ul class="etape">
+             <ol class="fonctionnement">
+                 <a href="#">
                  <li>
+                     <span class="liste">1</span>
                      <i class="fas fa-mobile-alt"></i>
                      <p>Choisissez un restaurant</p>
                  </li>
+                </a>
+                 <a href="#">
                  <li>
+                     <span class="liste">2</span>
                     <i class="fas fa-list-ul"></i>
                     <p>Composez votre menu</p>
                  </li>
+                </a>
+                <a href="#">
                  <li>
+                     <span class="liste">3</span>
                     <i class="fas fa-store"></i>
                     <p>Dégustez au restaurant</p>
                  </li>
-            </ul>
+                </a>
+            </ol>
          </section>
             <section class="restaurant">
                 <h2>Restaurants</h2>
                 <div class="restaurant__nav">
                     <article class="restaurant__article">
-                        <a href="menu_la_palette_du_gout.html">
+                        <a class="restaurant__nav" href="menu_la_palette_du_gout.html">
                             <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
                                 <span class="restaurant__article--new">Nouveau</span>
@@ -55,13 +64,13 @@
                                     <h3>La palette du goût</h3>
                                     <p>Ménilmontant</p>
                                 <div class="like">
-                                    <i class="heart_empty far fa-heart" aria-hidden="true"></i><i class="heart_full fas fa-heart"></i>
+                                    <i class="heart_empty far fa-heart"></i>
                                 </div>
                             </div>  
                         </a>
                     </article>
                     <article class="restaurant__article">
-                        <a href="menu_la_note_enchantée.html">
+                        <a class="restaurant__nav" href="menu_la_note_enchantée.html">
                             <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
                                 <span class="restaurant__article--new">Nouveau</span>
@@ -70,13 +79,13 @@
                                     <h3>La note enchantée</h3>
                                     <p>Charonne</p>
                                 <div>
-                                    <i class="heart_empty far fa-heart"></i><i class="heart_full fas fa-heart"></i>
+                                    <i class="heart_empty far fa-heart"></i>
                                 </div>
                             </div>   
                         </a>
                     </article>
                     <article class="restaurant__article">
-                        <a href="menu_a_la_française.html">
+                        <a class="restaurant__nav" href="menu_a_la_française.html">
                             <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
                             </div>
@@ -84,13 +93,13 @@
                                     <h3>À la française</h3>
                                     <p>Cité Rouge</p>
                                 <div>
-                                    <i class="heart_empty far fa-heart"></i><i class="heart_full fas fa-heart"></i>
+                                    <i class="heart_empty far fa-heart"></i>
                                 </div>
                             </div> 
                         </a>
                     </article>
                     <article class="restaurant__article">
-                        <a href="menu_le_delice_des_sens.html">
+                        <a class="restaurant__nav" href="menu_le_delice_des_sens.html">
                             <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
                             </div>
@@ -98,7 +107,7 @@
                                     <h3>Le délice des sens</h3>
                                     <p>Folie-Méricourt</p>
                                 <div>
-                                    <i class="heart_empty far fa-heart"></i><i class="heart_full fas fa-heart"></i>
+                                    <i class="heart_empty far fa-heart"></i>
                                 </div>
                             </div>   
                         </a>
