--- a/html/menu_a_la_française.html
+++ b/html/menu_a_la_française.html
@@ -7,143 +7,145 @@
   src="https://kit.fontawesome.com/f3cd396271.js"
   crossorigin="anonymous"
   ></script>
-  <link rel="stylesheet" href="../css/prefixed/style.css">
+  <link rel="stylesheet" href="../css/style.css">
  </head>
  <body>
-    <header>
-        <h1><a href="accueil.html"><i class="arrow fas fa-arrow-left"></i></a>ohmyfood</h1>
+    <header class="header">
+        <a href="accueil.html"><i class="arrow fas fa-arrow-left"></i></a>
+        <h1 class="header__titre">ohmyfood</h1>
     </header>
     <main>
         <div class="entete">
     <img src="../images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
-        <div class="titre">
-            <h2>À la française</h2><i class="heart_empty far fa-heart" ></i><i class="heart_full fas fa-heart" ></i>
+        <div class="entete__titre">
+            <h2>À la française</h2><i class="heart_empty far fa-heart" ></i>
         </div>
     </div>
-    <section class="choix_menu">
-        <h3>ENTRÉES</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Tartare de poulpe acidulé</h4>
+    <section class="menu">
+        <h4>ENTRÉES</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Tartare de poulpe acidulé</h5>
                     <p>Aux zestes d'orange</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>25€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle"></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Velouté de légumes d'antan</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Velouté de légumes d'antan</h5>
                     <p>Carotte, panais, topinambour</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>35€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Soupe à l'oignon</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Soupe à l'oignon</h5>
                     <p>Revisitée</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>20€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
         </article>
     </section>
-        <section class="choix_menu">   
-        <h3>PLATS</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Coquilles Saint-Jacques</h4>
+        <section class="menu">   
+        <h4>PLATS</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Coquilles Saint-Jacques</h5>
                     <p>Accompagnées d'une purée de panais</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>40€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <div class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Magret de canard</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Magret de canard</h5>
                     <p>Et parmentier de pommes de terre</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>35€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Pigeonneau d’Ille-et-Vilaine</h5>
                     <p>Sur son lit de gnocchis aux légumes</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>44€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
         </article>
     </section>
-    <section class="choix_menu">
-        <h3>DESSERTS</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Pétales de violettes glacés</h4>
+    <section class="menu">
+        <h4>DESSERTS</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Pétales de violettes glacés</h5>
                     <p>Et purée de noisettes</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>18€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Fondant au chocolat</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Fondant au chocolat</h5>
                     <p>Revisité</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>22€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Millefeuille croustillant</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Millefeuille croustillant</h5>
                     <p>Myrtilles et pâte d’amande</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>23€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
-        </article>
-        </section>
-        <div>
+        </article>   
+        <div class="commander">
         <input type="button" class="button" value="Commander">
     </div>
+        </section>
+     
 </main>
     <footer>
         <nav>
-            <h3>ohmyfood</h3>
+            <h4>ohmyfood</h4>
             <ul>
                 <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
                 <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
