--- a/html/accueil.html
+++ b/html/accueil.html
@@ -11,12 +11,13 @@
  </head>
  <body>
      <header class="header">
-         <h1 class="header__titre">ohmyfood</h1>  
-         <div class="header__localisation">
+         <h1 class="header__titre">ohmyfood</h1> 
+         </header>
+         <div class="localisation">
             <i class="fas fa-map-marker-alt"></i>
             <p>Paris, Belleville</p>
          </div>
-     </header>
+     
      <main>
          <section class="welcome">
             <h2>Réservez le menu qui vous convient</h2>
