--- a/html/menu_le_delice_des_sens.html
+++ b/html/menu_le_delice_des_sens.html
@@ -7,144 +7,145 @@
   src="https://kit.fontawesome.com/f3cd396271.js"
   crossorigin="anonymous"
   ></script>
-  <link rel="stylesheet" href="../css/prefixed/style.css">
+  <link rel="stylesheet" href="../css/style.css">
  </head>
 <body>
-    <header>
-        <h1><a href="accueil.html"><i class="arrow fas fa-arrow-left" ></i></a>ohmyfood</h1>
+    <header class="header">
+        <a href="accueil.html"><i class="arrow fas fa-arrow-left" ></i></a>
+        <h1 class="header__titre">ohmyfood</h1>
     </header>
     <main>
         <div class="entete">
     <img src="../images/Maquettes Ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
-    <section class="menu">
-        <div class="titre">
-            <h2>Le délice des sens</h2><i class="heart_empty far fa-heart" ></i><i class="heart_full fas fa-heart" ></i>
+        <div class="entete__titre">
+            <h2>Le délice des sens</h2><i class="heart_empty far fa-heart" ></i>
         </div>
     </div>
-    <section class="choix_menu">
-        <h3>ENTRÉES</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Tartare de thon</h4>
+    <section class="menu">
+        <h4>ENTRÉES</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Tartare de thon</h5>
                     <p>Assaisonné au yuzu</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>25€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Bouchée de homard croustillant</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Bouchée de homard croustillant</h5>
                     <p>Et sa farandole de petits légumes</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>35€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Velouté de cèpes</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Velouté de cèpes</h5>
                     <p>Aux truffes</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>20€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
     </section>    
-    <section class="choix_menu">
-        <h3>PLATS</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Poulet rôti aux herbes de Provence</h4>
+    <section class="menu">
+        <h4>PLATS</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Poulet rôti aux herbes de Provence</h5>
                     <p>Et sa crème de truffe</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>40€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Langouste rôtie </h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Langouste rôtie </h5>
                     <p>Et ses légumes de saison</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>35€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Côte de boeuf Angus </h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Côte de boeuf Angus </h5>
                     <p>Et sa purée de panais</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>44€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
     </section>
-    <section class="choix_menu">
-        <h3>DESSERTS</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Farandole de desserts</h4>
+    <section class="menu">
+        <h4>DESSERTS</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Farandole de desserts</h5>
                     <p>Du chef</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>18€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Crème brulée </h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Crème brulée </h5>
                     <p>Revisitée</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>22€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Tiramisu</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Tiramisu</h5>
                     <p>À la noisette</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>23€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-    </section>
-        <div>
+    
+        <div class="commander">
         <input type="button" class="button" value="Commander">
     </div>
+</section>
     </main>
     <footer>
         <nav>
-            <h3>ohmyfood</h3>
+            <h4>ohmyfood</h4>
             <ul>
                 <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
                 <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
