style fini+ anim

--- a/html/accueil.html
+++ b/html/accueil.html
@@ -31,21 +31,21 @@
              <ol class="fonctionnement">
                  <a href="#">
                  <li>
-                     <span class="liste">1</span>
+                     <p class="liste">1</p>
                      <i class="fas fa-mobile-alt"></i>
                      <p>Choisissez un restaurant</p>
                  </li>
                 </a>
                  <a href="#">
                  <li>
-                     <span class="liste">2</span>
+                     <p class="liste">2</p>
                     <i class="fas fa-list-ul"></i>
                     <p>Composez votre menu</p>
                  </li>
                 </a>
                 <a href="#">
                  <li>
-                     <span class="liste">3</span>
+                     <p class="liste">3</p>
                     <i class="fas fa-store"></i>
                     <p>Dégustez au restaurant</p>
                  </li>
@@ -59,13 +59,13 @@
                         <a class="restaurant__nav" href="menu_la_palette_du_gout.html">
                             <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
-                                <span class="restaurant__article--new">Nouveau</span>
+                                <p class="restaurant__article--new">Nouveau</p>
                             </div>
                                 <div class="restaurant__texte">
                                     <h3>La palette du goût</h3>
                                     <p>Ménilmontant</p>
                                 <div class="like">
-                                    <i class="heart_empty far fa-heart"></i>
+                                    <i class="heart_empty far fa-heart"></i><i id="iweight" class="heart_empty far fa-heart"></i>
                                 </div>
                             </div>  
                         </a>
@@ -74,13 +74,13 @@
                         <a class="restaurant__nav" href="menu_la_note_enchantée.html">
                             <div class="restaurant__img">
                                 <img src="../images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
-                                <span class="restaurant__article--new">Nouveau</span>
+                                <p class="restaurant__article--new">Nouveau</p>
                             </div>
                             <div class="restaurant__texte">
                                     <h3>La note enchantée</h3>
                                     <p>Charonne</p>
                                 <div>
-                                    <i class="heart_empty far fa-heart"></i>
+                                    <i class="heart_empty far fa-heart"></i><i id="iweight" class="heart_empty far fa-heart"></i>
                                 </div>
                             </div>   
                         </a>
@@ -94,7 +94,7 @@
                                     <h3>À la française</h3>
                                     <p>Cité Rouge</p>
                                 <div>
-                                    <i class="heart_empty far fa-heart"></i>
+                                    <i class="heart_empty far fa-heart"></i><i id="iweight" class="heart_empty far fa-heart"></i>
                                 </div>
                             </div> 
                         </a>
@@ -108,7 +108,7 @@
                                     <h3>Le délice des sens</h3>
                                     <p>Folie-Méricourt</p>
                                 <div>
-                                    <i class="heart_empty far fa-heart"></i>
+                                    <i class="heart_empty far fa-heart"></i><i id="iweight" class="heart_empty far fa-heart"></i>
                                 </div>
                             </div>   
                         </a>
