--- a/html/menu_le_delice_des_sens.html
+++ b/html/menu_le_delice_des_sens.html
@@ -18,7 +18,10 @@
         <div class="entete">
     <img src="../images/Maquettes Ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
         <div class="entete__titre">
-            <h2>Le délice des sens</h2><i class="heart_empty far fa-heart" ></i>
+            <h2>Le délice des sens</h2>
+            <div class="coeur">
+                <i class="heart_empty far fa-heart" ></i><i id="iweightpage" class="heart_empty far fa-heart"></i>
+        </div>
         </div>
     </div>
     <section class="menu">
@@ -145,7 +148,7 @@
     </main>
     <footer>
         <nav>
-            <h4>ohmyfood</h4>
+            <h3>ohmyfood</h3>
             <ul>
                 <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
                 <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
