--- a/html/menu_a_la_française.html
+++ b/html/menu_a_la_française.html
@@ -18,8 +18,11 @@
         <div class="entete">
     <img src="../images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
         <div class="entete__titre">
-            <h2>À la française</h2><i class="heart_empty far fa-heart" ></i>
+            <h2>À la française</h2>
+            <div class="coeur">
+                <i class="heart_empty far fa-heart" ></i><i id="iweightpage" class="heart_empty far fa-heart"></i>
         </div>
+            </div>
     </div>
     <section class="menu">
         <h4>ENTRÉES</h4>
@@ -145,7 +148,7 @@
 </main>
     <footer>
         <nav>
-            <h4>ohmyfood</h4>
+            <h3>ohmyfood</h3>
             <ul>
                 <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
                 <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
