--- a/html/menu_la_note_enchantée.html
+++ b/html/menu_la_note_enchantée.html
@@ -7,151 +7,156 @@
   src="https://kit.fontawesome.com/f3cd396271.js"
   crossorigin="anonymous"
   ></script>
-  <link rel="stylesheet" href="../css/prefixed/style.css">
+  <link rel="stylesheet" href="../css/style.css">
  </head>
 <body>
-    <header>
-        <h1><a href="accueil.html"><i class="arrow fas fa-arrow-left" ></i></a>ohmyfood</h1>
+    <header class="header">
+        <a href="accueil.html"><i class="arrow fas fa-arrow-left" ></i></a>
+          <h1 class="header__titre">ohmyfood</h1>
     </header>
     <main>
     <div class="entete">
     <img src="../images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
-        <div class="title">
-            <h2>La note enchantée</h2><i class="heart_empty far fa-heart" ></i><i class="heart_full fas fa-heart" ></i>
+        <div class="entete__titre">
+            <h2>La note enchantée</h2>
+            <div class="coeur">
+                <i class="heart_empty far fa-heart" ></i><i id="iweightpage" class="heart_empty far fa-heart"></i>
+        </div>
         </div>
     </div>
-    <section class="choix_menu">
-        <h3>ENTRÉES</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Ravioles de foie gras</h4>
+    <section class="menu">
+        <h4>ENTRÉES</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Ravioles de foie gras</h5>
                     <p>Accompagnés de leur crème à la truffe</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>25€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Caviar osciètre</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Caviar osciètre</h5>
                     <p>Sur blini à la farine de blé noir</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>35€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Homard et espuma de potiron</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Homard et espuma de potiron</h5>
                     <p>Mariné aux zestes d'orange</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>20€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Foie gras de canard cuit entier</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Foie gras de canard cuit entier</h5>
                     <p>Confiture de figue et pain toasté</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>35€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
     </section>   
-    <section class="choix_menu">
-        <h3>PLATS</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Noix de coquilles Saint-Jacques</h4>
+    <section class="menu">
+        <h4>PLATS</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Noix de coquilles Saint-Jacques</h5>
                     <p>Sur lit de purée de céleri-rave</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>40€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Langoustine poêlée</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Langoustine poêlée</h5>
                     <p>Purée de patate douce</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>35€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Mijoté de queue de boeuf </h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Mijoté de queue de boeuf </h5>
                     <p>Et riz sauvage aux zestes de citron</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>44€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
         </article>
     </section>
-    <section class="choix_menu">
-        <h3>DESSERTS</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Macaron noisette et chocolat</h4>
+    <section class="menu">
+        <h4>DESSERTS</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Macaron noisette et chocolat</h5>
                     <p>Glace au caramel brun et sel de Guérande</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>18€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Baba au rhum revisité </h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Baba au rhum revisité </h5>
                     <p>Avec son coulis de citron</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>22€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Tarte au citron meringuée</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Tarte au citron meringuée</h5>
                     <p>Déstructurée</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>23€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-    </section>
-    <div>
+    
+    <div class="commander">
         <input type="button" class="button" value="Commander">
     </div>
+</section>
 </main>
     <footer>
         <nav>
