--- a/html/menu_la_palette_du_gout.html
+++ b/html/menu_la_palette_du_gout.html
@@ -7,139 +7,144 @@
   src="https://kit.fontawesome.com/f3cd396271.js"
   crossorigin="anonymous"
   ></script>
-  <link rel="stylesheet" href="../css/prefixed/style.css">
+  <link rel="stylesheet" href="../css/style.css">
  </head>
  <body>
-    <header>
-        <h1><a href="accueil.html"><i class="arrow fas fa-arrow-left" ></i></a>ohmyfood</h1>
+    <header class="header">
+        <a href="accueil.html"><i class="arrow fas fa-arrow-left" ></i></a>
+          <h1 class="header__titre">ohmyfood</h1>
     </header>
     <main>
         <div class="entete">
     <img src="../images/Maquettes Ohmyfood/images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
-        <div class="titre">
-            <h2>La palette du goût</h2><i class="heart_empty far fa-heart" ></i><i class="heart_full fas fa-heart" ></i>
+        <div class="entete__titre">
+            <h2>La palette du goût</h2>
+            <div class="coeur">
+                <i class="heart_empty far fa-heart" ></i><i id="iweightpage" class="heart_empty far fa-heart"></i>
+        </div>
         </div>
     </div>
-    <section class="choix_menu">
-        <h3>ENTRÉES</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Fricassée d'escargot</h4>
+    <section class="menu">
+        <h4>ENTRÉES</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Fricassée d'escargot</h5>
                     <p>Au piment d'Espelette</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>25€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Foie gras de canard mi-cuit</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Foie gras de canard mi-cuit</h5>
                     <p>Et ses copeaux de truffe noire</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>35€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Oeuf au plat</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Oeuf au plat</h5>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>20€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
         </article>
     </section>    
-    <section class="choix_menu">
-        <h3>PLATS</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Filet de boeuf aux herbes</h4>
+    <section class="menu">
+        <h4>PLATS</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Filet de boeuf aux herbes</h5>
                     <p>Accompagné de sa ribambelle de légumes</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>40€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Parmentier de queue de boeuf</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Parmentier de queue de boeuf</h5>
                     <p>À la truffe noire sur sa purée de panais</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>35€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Filet de turbot</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Filet de turbot</h5>
                     <p>Aux agrumes</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>44€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
         </article>
     </section>
-    <section class="choix_menu">
-        <h3>DESSERTS</h3>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Paris-Brest</h4>
+    <section class="menu">
+        <h4>DESSERTS</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Paris-Brest</h5>
                     <p>Revisité</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>18€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Macaron au chocolat d'exception</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Macaron au chocolat d'exception</h5>
                     <p>Et glace à la vanille de Madagascar</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>22€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
             </article>
-            <article class="carte_menu">
-                <div class="texte_menu">
-                    <h4>Mousse au chocolat</h4>
+            <article class="menu__carte">
+                <div class="menu__texte">
+                    <h5>Mousse au chocolat</h5>
                     <p>Au piment d'Espelette et à la truffe noire</p>
                 </div>
-                <div class="prix_menu">
+                <div class="menu__prix">
                     <p>23€</p>
                 </div>
-                <div class="anim_menu">
+                <div class="menu__anim">
                     <i class="fas fa-check-circle" ></i>
                 </div>
         </article>
-    </section>
-    <div>
+    
+    <div class="commander">
         <input type="button" class="button" value="Commander">
     </div>
+</section>
 </main>
  <footer>
     <nav>
