--- a/html/menu_a_la_française.html
+++ b/html/menu_a_la_française.html
@@ -11,17 +11,18 @@
  </head>
  <body>
     <header class="header">
-        <a href="accueil.html"><i class="arrow fas fa-arrow-left"></i></a>
+        <a href="index.html"><i class="arrow fas fa-arrow-left"></i></a>
         <h1 class="header__titre">ohmyfood</h1>
     </header>
-    <main>
+    <main class="dimension">
         <div class="entete">
     <img src="../images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
-        <div class="entete__titre">
+        </div>
+        <div class="titre">
             <h2>À la française</h2>
             <div class="coeur">
                 <i class="heart_empty far fa-heart" ></i><i id="iweightpage" class="heart_empty far fa-heart"></i>
-        </div>
+        
             </div>
     </div>
     <section class="menu">
