--- a/html/menu_la_note_enchantée.html
+++ b/html/menu_la_note_enchantée.html
@@ -11,17 +11,18 @@
  </head>
 <body>
     <header class="header">
-        <a href="accueil.html"><i class="arrow fas fa-arrow-left" ></i></a>
+        <a href="index.html"><i class="arrow fas fa-arrow-left" ></i></a>
           <h1 class="header__titre">ohmyfood</h1>
     </header>
-    <main>
+    <main class="dimension">
     <div class="entete">
     <img src="../images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
-        <div class="entete__titre">
+</div>
+    <div class="titre">
             <h2>La note enchantée</h2>
             <div class="coeur">
                 <i class="heart_empty far fa-heart" ></i><i id="iweightpage" class="heart_empty far fa-heart"></i>
-        </div>
+        
         </div>
     </div>
     <section class="menu">
