--- a/html/menu_le_delice_des_sens.html
+++ b/html/menu_le_delice_des_sens.html
@@ -11,17 +11,18 @@
  </head>
 <body>
     <header class="header">
-        <a href="accueil.html"><i class="arrow fas fa-arrow-left" ></i></a>
+        <a href="index.html"><i class="arrow fas fa-arrow-left" ></i></a>
         <h1 class="header__titre">ohmyfood</h1>
     </header>
-    <main>
+    <main class="dimension">
         <div class="entete">
     <img src="../images/Maquettes Ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
-        <div class="entete__titre">
+</div>    
+    <div class="titre">
             <h2>Le délice des sens</h2>
             <div class="coeur">
                 <i class="heart_empty far fa-heart" ></i><i id="iweightpage" class="heart_empty far fa-heart"></i>
-        </div>
+        
         </div>
     </div>
     <section class="menu">
