index.html github

--- a/html/menu_le_delice_des_sens.html
+++ b/html/menu_le_delice_des_sens.html
@@ -1,161 +1,159 @@
 <!DOCTYPE html>
 <html lang='fr'>
- <head>
-  <title>Le délice des sens</title>
-  <meta charset="utf-8">
-  <script
-  src="https://kit.fontawesome.com/f3cd396271.js"
-  crossorigin="anonymous"
-  ></script>
-  <link rel="stylesheet" href="../css/style.css">
- </head>
-<body>
-    <header class="header">
-        <a href="index.html"><i class="arrow fas fa-arrow-left" ></i></a>
-        <h1 class="header__titre">ohmyfood</h1>
-    </header>
-    <main class="dimension">
-        <div class="entete">
-    <img src="../images/Maquettes Ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
-</div>    
-    <div class="titre">
+   <head>
+      <title>Le délice des sens</title>
+      <meta charset="utf-8">
+      <script
+         src="https://kit.fontawesome.com/f3cd396271.js"
+         crossorigin="anonymous"
+         ></script>
+      <link rel="stylesheet" href="../css/style.css">
+   </head>
+   <body>
+      <header class="header">
+         <a href="index.html"><i class="arrow fas fa-arrow-left" ></i></a>
+         <h1 class="header__titre">ohmyfood</h1>
+      </header>
+      <main class="dimension">
+         <div class="entete">
+            <img src="../images/Maquettes Ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
+         </div>
+         <div class="titre">
             <h2>Le délice des sens</h2>
             <div class="coeur">
-                <i class="heart_empty far fa-heart" ></i><i id="iweightpage" class="heart_empty far fa-heart"></i>
-        
-        </div>
-    </div>
-    <section class="menu">
-        <h4>ENTRÉES</h4>
+               <i class="fas fa-heart" ></i>
+            </div>
+         </div>
+         <section class="menu">
+            <h4>ENTRÉES</h4>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Tartare de thon</h5>
-                    <p>Assaisonné au yuzu</p>
-                </div>
-                <div class="menu__prix">
-                    <p>25€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Tartare de thon</h5>
+                  <p>Assaisonné au yuzu</p>
+               </div>
+               <div class="menu__prix">
+                  <p>25€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Bouchée de homard croustillant</h5>
-                    <p>Et sa farandole de petits légumes</p>
-                </div>
-                <div class="menu__prix">
-                    <p>35€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Bouchée de homard croustillant</h5>
+                  <p>Et sa farandole de petits légumes</p>
+               </div>
+               <div class="menu__prix">
+                  <p>35€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Velouté de cèpes</h5>
-                    <p>Aux truffes</p>
-                </div>
-                <div class="menu__prix">
-                    <p>20€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Velouté de cèpes</h5>
+                  <p>Aux truffes</p>
+               </div>
+               <div class="menu__prix">
+                  <p>20€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
-    </section>    
-    <section class="menu">
-        <h4>PLATS</h4>
+         </section>
+         <section class="menu">
+            <h4>PLATS</h4>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Poulet rôti aux herbes de Provence</h5>
-                    <p>Et sa crème de truffe</p>
-                </div>
-                <div class="menu__prix">
-                    <p>40€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
-            </article>
-            <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Langouste rôtie </h5>
-                    <p>Et ses légumes de saison</p>
-                </div>
-                <div class="menu__prix">
-                    <p>35€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Poulet rôti aux herbes de Provence</h5>
+                  <p>Et sa crème de truffe</p>
+               </div>
+               <div class="menu__prix">
+                  <p>40€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Côte de boeuf Angus </h5>
-                    <p>Et sa purée de panais</p>
-                </div>
-                <div class="menu__prix">
-                    <p>44€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
-            </article>
-    </section>
-    <section class="menu">
-        <h4>DESSERTS</h4>
-            <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Farandole de desserts</h5>
-                    <p>Du chef</p>
-                </div>
-                <div class="menu__prix">
-                    <p>18€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Langouste rôtie </h5>
+                  <p>Et ses légumes de saison</p>
+               </div>
+               <div class="menu__prix">
+                  <p>35€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Crème brulée </h5>
-                    <p>Revisitée</p>
-                </div>
-                <div class="menu__prix">
-                    <p>22€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Côte de boeuf Angus </h5>
+                  <p>Et sa purée de panais</p>
+               </div>
+               <div class="menu__prix">
+                  <p>44€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
+            </article>
+         </section>
+         <section class="menu">
+            <h4>DESSERTS</h4>
+            <article class="menu__carte">
+               <div class="menu__texte">
+                  <h5>Farandole de desserts</h5>
+                  <p>Du chef</p>
+               </div>
+               <div class="menu__prix">
+                  <p>18€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Tiramisu</h5>
-                    <p>À la noisette</p>
-                </div>
-                <div class="menu__prix">
-                    <p>23€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Crème brulée </h5>
+                  <p>Revisitée</p>
+               </div>
+               <div class="menu__prix">
+                  <p>22€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
-    
-        <div class="commander">
-        <input type="button" class="button" value="Commander">
-    </div>
-</section>
-    </main>
-    <footer>
-        <nav>
+            <article class="menu__carte">
+               <div class="menu__texte">
+                  <h5>Tiramisu</h5>
+                  <p>À la noisette</p>
+               </div>
+               <div class="menu__prix">
+                  <p>23€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
+            </article>
+            <div class="commander">
+               <input type="button" class="button" value="Commander">
+            </div>
+         </section>
+      </main>
+      <footer>
+         <nav>
             <h3>ohmyfood</h3>
             <ul>
-                <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-                <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-                <li><a href="mentions_legales">Mentions légales</a></li>
-                <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+               <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+               <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+               <li><a href="mentions_legales">Mentions légales</a></li>
+               <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
             </ul>
-        </nav>
-     </footer>
-</body>
+         </nav>
+      </footer>
+   </body>
