--- a/html/menu_a_la_française.html
+++ b/html/menu_a_la_française.html
@@ -1,161 +1,159 @@
 <!DOCTYPE html>
 <html lang='fr'>
- <head>
-  <title>À la française</title>
-  <meta charset="utf-8">
-  <script
-  src="https://kit.fontawesome.com/f3cd396271.js"
-  crossorigin="anonymous"
-  ></script>
-  <link rel="stylesheet" href="../css/style.css">
- </head>
- <body>
-    <header class="header">
-        <a href="index.html"><i class="arrow fas fa-arrow-left"></i></a>
-        <h1 class="header__titre">ohmyfood</h1>
-    </header>
-    <main class="dimension">
-        <div class="entete">
-    <img src="../images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
-        </div>
-        <div class="titre">
+   <head>
+      <title>À la française</title>
+      <meta charset="utf-8">
+      <script
+         src="https://kit.fontawesome.com/f3cd396271.js"
+         crossorigin="anonymous"
+         ></script>
+      <link rel="stylesheet" href="../css/style.css">
+   </head>
+   <body>
+      <header class="header">
+         <a href="index.html"><i class="arrow fas fa-arrow-left"></i></a>
+         <h1 class="header__titre">ohmyfood</h1>
+      </header>
+      <main class="dimension">
+         <div class="entete">
+            <img src="../images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
+         </div>
+         <div class="titre">
             <h2>À la française</h2>
             <div class="coeur">
-                <i class="heart_empty far fa-heart" ></i><i id="iweightpage" class="heart_empty far fa-heart"></i>
-        
+               <i class="fas fa-heart" ></i>
             </div>
-    </div>
-    <section class="menu">
-        <h4>ENTRÉES</h4>
+         </div>
+         <section class="menu">
+            <h4>ENTRÉES</h4>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Tartare de poulpe acidulé</h5>
-                    <p>Aux zestes d'orange</p>
-                </div>
-                <div class="menu__prix">
-                    <p>25€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle"></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Tartare de poulpe acidulé</h5>
+                  <p>Aux zestes d'orange</p>
+               </div>
+               <div class="menu__prix">
+                  <p>25€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle"></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Velouté de légumes d'antan</h5>
-                    <p>Carotte, panais, topinambour</p>
-                </div>
-                <div class="menu__prix">
-                    <p>35€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Velouté de légumes d'antan</h5>
+                  <p>Carotte, panais, topinambour</p>
+               </div>
+               <div class="menu__prix">
+                  <p>35€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Soupe à l'oignon</h5>
-                    <p>Revisitée</p>
-                </div>
-                <div class="menu__prix">
-                    <p>20€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
-        </article>
-    </section>
-        <section class="menu">   
-        <h4>PLATS</h4>
+               <div class="menu__texte">
+                  <h5>Soupe à l'oignon</h5>
+                  <p>Revisitée</p>
+               </div>
+               <div class="menu__prix">
+                  <p>20€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
+            </article>
+         </section>
+         <section class="menu">
+            <h4>PLATS</h4>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Coquilles Saint-Jacques</h5>
-                    <p>Accompagnées d'une purée de panais</p>
-                </div>
-                <div class="menu__prix">
-                    <p>40€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Coquilles Saint-Jacques</h5>
+                  <p>Accompagnées d'une purée de panais</p>
+               </div>
+               <div class="menu__prix">
+                  <p>40€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Magret de canard</h5>
-                    <p>Et parmentier de pommes de terre</p>
-                </div>
-                <div class="menu__prix">
-                    <p>35€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Magret de canard</h5>
+                  <p>Et parmentier de pommes de terre</p>
+               </div>
+               <div class="menu__prix">
+                  <p>35€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Pigeonneau d’Ille-et-Vilaine</h5>
-                    <p>Sur son lit de gnocchis aux légumes</p>
-                </div>
-                <div class="menu__prix">
-                    <p>44€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
-        </article>
-    </section>
-    <section class="menu">
-        <h4>DESSERTS</h4>
+               <div class="menu__texte">
+                  <h5>Pigeonneau d’Ille-et-Vilaine</h5>
+                  <p>Sur son lit de gnocchis aux légumes</p>
+               </div>
+               <div class="menu__prix">
+                  <p>44€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
+            </article>
+         </section>
+         <section class="menu">
+            <h4>DESSERTS</h4>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Pétales de violettes glacés</h5>
-                    <p>Et purée de noisettes</p>
-                </div>
-                <div class="menu__prix">
-                    <p>18€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Pétales de violettes glacés</h5>
+                  <p>Et purée de noisettes</p>
+               </div>
+               <div class="menu__prix">
+                  <p>18€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Fondant au chocolat</h5>
-                    <p>Revisité</p>
-                </div>
-                <div class="menu__prix">
-                    <p>22€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Fondant au chocolat</h5>
+                  <p>Revisité</p>
+               </div>
+               <div class="menu__prix">
+                  <p>22€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Millefeuille croustillant</h5>
-                    <p>Myrtilles et pâte d’amande</p>
-                </div>
-                <div class="menu__prix">
-                    <p>23€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
-        </article>   
-        <div class="commander">
-        <input type="button" class="button" value="Commander">
-    </div>
-        </section>
-     
-</main>
-    <footer>
-        <nav>
+               <div class="menu__texte">
+                  <h5>Millefeuille croustillant</h5>
+                  <p>Myrtilles et pâte d’amande</p>
+               </div>
+               <div class="menu__prix">
+                  <p>23€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
+            </article>
+            <div class="commander">
+               <input type="button" class="button" value="Commander">
+            </div>
+         </section>
+      </main>
+      <footer>
+         <nav>
             <h3>ohmyfood</h3>
             <ul>
-                <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-                <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-                <li><a href="mentions_legales">Mentions légales</a></li>
-                <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+               <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+               <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+               <li><a href="mentions_legales">Mentions légales</a></li>
+               <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
             </ul>
-        </nav>
-     </footer>
-</body>
+         </nav>
+      </footer>
+   </body>
