--- a/html/menu_la_note_enchantée.html
+++ b/html/menu_la_note_enchantée.html
@@ -1,173 +1,171 @@
 <!DOCTYPE html>
 <html lang='fr'>
- <head>
-  <title>La note enchantée</title>
-  <meta charset="utf-8">
-  <script
-  src="https://kit.fontawesome.com/f3cd396271.js"
-  crossorigin="anonymous"
-  ></script>
-  <link rel="stylesheet" href="../css/style.css">
- </head>
-<body>
-    <header class="header">
-        <a href="index.html"><i class="arrow fas fa-arrow-left" ></i></a>
-          <h1 class="header__titre">ohmyfood</h1>
-    </header>
-    <main class="dimension">
-    <div class="entete">
-    <img src="../images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
-</div>
-    <div class="titre">
+   <head>
+      <title>La note enchantée</title>
+      <meta charset="utf-8">
+      <script
+         src="https://kit.fontawesome.com/f3cd396271.js"
+         crossorigin="anonymous"
+         ></script>
+      <link rel="stylesheet" href="../css/style.css">
+   </head>
+   <body>
+      <header class="header">
+         <a href="index.html"><i class="arrow fas fa-arrow-left" ></i></a>
+         <h1 class="header__titre">ohmyfood</h1>
+      </header>
+      <main class="dimension">
+         <div class="entete">
+            <img src="../images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
+         </div>
+         <div class="titre">
             <h2>La note enchantée</h2>
             <div class="coeur">
-                <i class="heart_empty far fa-heart" ></i><i id="iweightpage" class="heart_empty far fa-heart"></i>
-        
-        </div>
-    </div>
-    <section class="menu">
-        <h4>ENTRÉES</h4>
+               <i class="fas fa-heart" ></i>
+            </div>
+         </div>
+         <section class="menu">
+            <h4>ENTRÉES</h4>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Ravioles de foie gras</h5>
-                    <p>Accompagnés de leur crème à la truffe</p>
-                </div>
-                <div class="menu__prix">
-                    <p>25€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Ravioles de foie gras</h5>
+                  <p>Accompagnés de leur crème à la truffe</p>
+               </div>
+               <div class="menu__prix">
+                  <p>25€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Caviar osciètre</h5>
-                    <p>Sur blini à la farine de blé noir</p>
-                </div>
-                <div class="menu__prix">
-                    <p>35€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Caviar osciètre</h5>
+                  <p>Sur blini à la farine de blé noir</p>
+               </div>
+               <div class="menu__prix">
+                  <p>35€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Homard et espuma de potiron</h5>
-                    <p>Mariné aux zestes d'orange</p>
-                </div>
-                <div class="menu__prix">
-                    <p>20€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Homard et espuma de potiron</h5>
+                  <p>Mariné aux zestes d'orange</p>
+               </div>
+               <div class="menu__prix">
+                  <p>20€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Foie gras de canard cuit entier</h5>
-                    <p>Confiture de figue et pain toasté</p>
-                </div>
-                <div class="menu__prix">
-                    <p>35€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Foie gras de canard cuit entier</h5>
+                  <p>Confiture de figue et pain toasté</p>
+               </div>
+               <div class="menu__prix">
+                  <p>35€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
-    </section>   
-    <section class="menu">
-        <h4>PLATS</h4>
+         </section>
+         <section class="menu">
+            <h4>PLATS</h4>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Noix de coquilles Saint-Jacques</h5>
-                    <p>Sur lit de purée de céleri-rave</p>
-                </div>
-                <div class="menu__prix">
-                    <p>40€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
-            </article>
-            <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Langoustine poêlée</h5>
-                    <p>Purée de patate douce</p>
-                </div>
-                <div class="menu__prix">
-                    <p>35€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Noix de coquilles Saint-Jacques</h5>
+                  <p>Sur lit de purée de céleri-rave</p>
+               </div>
+               <div class="menu__prix">
+                  <p>40€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Mijoté de queue de boeuf </h5>
-                    <p>Et riz sauvage aux zestes de citron</p>
-                </div>
-                <div class="menu__prix">
-                    <p>44€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
-        </article>
-    </section>
-    <section class="menu">
-        <h4>DESSERTS</h4>
-            <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Macaron noisette et chocolat</h5>
-                    <p>Glace au caramel brun et sel de Guérande</p>
-                </div>
-                <div class="menu__prix">
-                    <p>18€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Langoustine poêlée</h5>
+                  <p>Purée de patate douce</p>
+               </div>
+               <div class="menu__prix">
+                  <p>35€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Baba au rhum revisité </h5>
-                    <p>Avec son coulis de citron</p>
-                </div>
-                <div class="menu__prix">
-                    <p>22€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Mijoté de queue de boeuf </h5>
+                  <p>Et riz sauvage aux zestes de citron</p>
+               </div>
+               <div class="menu__prix">
+                  <p>44€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
+            </article>
+         </section>
+         <section class="menu">
+            <h4>DESSERTS</h4>
+            <article class="menu__carte">
+               <div class="menu__texte">
+                  <h5>Macaron noisette et chocolat</h5>
+                  <p>Glace au caramel brun et sel de Guérande</p>
+               </div>
+               <div class="menu__prix">
+                  <p>18€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Tarte au citron meringuée</h5>
-                    <p>Déstructurée</p>
-                </div>
-                <div class="menu__prix">
-                    <p>23€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Baba au rhum revisité </h5>
+                  <p>Avec son coulis de citron</p>
+               </div>
+               <div class="menu__prix">
+                  <p>22€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
-    
-    <div class="commander">
-        <input type="button" class="button" value="Commander">
-    </div>
-</section>
-</main>
-    <footer>
-        <nav>
+            <article class="menu__carte">
+               <div class="menu__texte">
+                  <h5>Tarte au citron meringuée</h5>
+                  <p>Déstructurée</p>
+               </div>
+               <div class="menu__prix">
+                  <p>23€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
+            </article>
+            <div class="commander">
+               <input type="button" class="button" value="Commander">
+            </div>
+         </section>
+      </main>
+      <footer>
+         <nav>
             <h3>ohmyfood</h3>
             <ul>
-                <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-                <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-                <li><a href="mentions_legales">Mentions légales</a></li>
-                <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+               <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+               <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+               <li><a href="mentions_legales">Mentions légales</a></li>
+               <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
             </ul>
-        </nav>
-     </footer>
-</body>
+         </nav>
+      </footer>
+   </body>
