--- a/html/menu_la_palette_du_gout.html
+++ b/html/menu_la_palette_du_gout.html
@@ -1,161 +1,159 @@
 <!DOCTYPE html>
 <html lang='fr'>
- <head>
-  <title>La palette du goût</title>
-  <meta charset="utf-8">
-  <script
-  src="https://kit.fontawesome.com/f3cd396271.js"
-  crossorigin="anonymous"
-  ></script>
-  <link rel="stylesheet" href="../css/style.css">
- </head>
- <body>
-    <header class="header">
-        <a href="index.html"><i class="arrow fas fa-arrow-left" ></i></a>
-          <h1 class="header__titre">ohmyfood</h1>
-    </header>
-    <main class="dimension">
-        <div class="entete">
-    <img src="../images/Maquettes Ohmyfood/images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
-</div>   
-    <div class="titre">
+   <head>
+      <title>La palette du goût</title>
+      <meta charset="utf-8">
+      <script
+         src="https://kit.fontawesome.com/f3cd396271.js"
+         crossorigin="anonymous"
+         ></script>
+      <link rel="stylesheet" href="../css/style.css">
+   </head>
+   <body>
+      <header class="header">
+         <a href="index.html"><i class="arrow fas fa-arrow-left" ></i></a>
+         <h1 class="header__titre">ohmyfood</h1>
+      </header>
+      <main class="dimension">
+         <div class="entete">
+            <img src="../images/Maquettes Ohmyfood/images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
+         </div>
+         <div class="titre">
             <h2>La palette du goût</h2>
             <div class="coeur">
-                <i class="heart_empty far fa-heart" ></i><i id="iweightpage" class="heart_empty far fa-heart"></i>
-        
-        </div>
-    </div>
-    <section class="menu">
-        <h4>ENTRÉES</h4>
+               <i class="fas fa-heart" ></i>
+            </div>
+         </div>
+         <section class="menu">
+            <h4>ENTRÉES</h4>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Fricassée d'escargot</h5>
-                    <p>Au piment d'Espelette</p>
-                </div>
-                <div class="menu__prix">
-                    <p>25€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Fricassée d'escargot</h5>
+                  <p>Au piment d'Espelette</p>
+               </div>
+               <div class="menu__prix">
+                  <p>25€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Foie gras de canard mi-cuit</h5>
-                    <p>Et ses copeaux de truffe noire</p>
-                </div>
-                <div class="menu__prix">
-                    <p>35€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Foie gras de canard mi-cuit</h5>
+                  <p>Et ses copeaux de truffe noire</p>
+               </div>
+               <div class="menu__prix">
+                  <p>35€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Oeuf au plat</h5>
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
-                </div>
-                <div class="menu__prix">
-                    <p>20€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
-        </article>
-    </section>    
-    <section class="menu">
-        <h4>PLATS</h4>
+               <div class="menu__texte">
+                  <h5>Oeuf au plat</h5>
+                  <p>Assaisonné à la truffe sur lit de caviar</p>
+               </div>
+               <div class="menu__prix">
+                  <p>20€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
+            </article>
+         </section>
+         <section class="menu">
+            <h4>PLATS</h4>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Filet de boeuf aux herbes</h5>
-                    <p>Accompagné de sa ribambelle de légumes</p>
-                </div>
-                <div class="menu__prix">
-                    <p>40€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Filet de boeuf aux herbes</h5>
+                  <p>Accompagné de sa ribambelle de légumes</p>
+               </div>
+               <div class="menu__prix">
+                  <p>40€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Parmentier de queue de boeuf</h5>
-                    <p>À la truffe noire sur sa purée de panais</p>
-                </div>
-                <div class="menu__prix">
-                    <p>35€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Parmentier de queue de boeuf</h5>
+                  <p>À la truffe noire sur sa purée de panais</p>
+               </div>
+               <div class="menu__prix">
+                  <p>35€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Filet de turbot</h5>
-                    <p>Aux agrumes</p>
-                </div>
-                <div class="menu__prix">
-                    <p>44€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
-        </article>
-    </section>
-    <section class="menu">
-        <h4>DESSERTS</h4>
+               <div class="menu__texte">
+                  <h5>Filet de turbot</h5>
+                  <p>Aux agrumes</p>
+               </div>
+               <div class="menu__prix">
+                  <p>44€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
+            </article>
+         </section>
+         <section class="menu">
+            <h4>DESSERTS</h4>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Paris-Brest</h5>
-                    <p>Revisité</p>
-                </div>
-                <div class="menu__prix">
-                    <p>18€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Paris-Brest</h5>
+                  <p>Revisité</p>
+               </div>
+               <div class="menu__prix">
+                  <p>18€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Macaron au chocolat d'exception</h5>
-                    <p>Et glace à la vanille de Madagascar</p>
-                </div>
-                <div class="menu__prix">
-                    <p>22€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
+               <div class="menu__texte">
+                  <h5>Macaron au chocolat d'exception</h5>
+                  <p>Et glace à la vanille de Madagascar</p>
+               </div>
+               <div class="menu__prix">
+                  <p>22€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
             </article>
             <article class="menu__carte">
-                <div class="menu__texte">
-                    <h5>Mousse au chocolat</h5>
-                    <p>Au piment d'Espelette et à la truffe noire</p>
-                </div>
-                <div class="menu__prix">
-                    <p>23€</p>
-                </div>
-                <div class="menu__anim">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
-        </article>
-    
-    <div class="commander">
-        <input type="button" class="button" value="Commander">
-    </div>
-</section>
-</main>
- <footer>
-    <nav>
-        <h3>ohmyfood</h3>
-        <ul>
-            <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-            <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-            <li><a href="mentions_legales">Mentions légales</a></li>
-            <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
-        </ul>
-    </nav>
- </footer>
-</body>
+               <div class="menu__texte">
+                  <h5>Mousse au chocolat</h5>
+                  <p>Au piment d'Espelette et à la truffe noire</p>
+               </div>
+               <div class="menu__prix">
+                  <p>23€</p>
+               </div>
+               <div class="menu__anim">
+                  <i class="fas fa-check-circle" ></i>
+               </div>
+            </article>
+            <div class="commander">
+               <input type="button" class="button" value="Commander">
+            </div>
+         </section>
+      </main>
+      <footer>
+         <nav>
+            <h3>ohmyfood</h3>
+            <ul>
+               <li><a href="proposition"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+               <li><a href="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+               <li><a href="mentions_legales">Mentions légales</a></li>
+               <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+            </ul>
+         </nav>
+      </footer>
+   </body>
