--- a/html/menu_a_la_française.html
+++ b/html/menu_a_la_française.html
@@ -11,7 +11,7 @@
    </head>
    <body>
       <header class="header">
-         <a href="index.html"><i class="arrow fas fa-arrow-left"></i></a>
+         <a href="../index.html"><i class="arrow fas fa-arrow-left"></i></a>
          <h1 class="header__titre">ohmyfood</h1>
       </header>
       <main class="dimension">
