--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
          src="https://kit.fontawesome.com/f3cd396271.js"
          crossorigin="anonymous"
          ></script>
-      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="./css/style.css">
    </head>
    <body>
       <header class="header">
@@ -55,9 +55,9 @@
             <h2>Restaurants</h2>
             <div class="restaurant__nav">
                <article class="restaurant__article">
-                  <a class="restaurant__nav" href="menu_la_palette_du_gout.html">
+                  <a class="restaurant__nav" href="./html/menu_la_palette_du_gout.html">
                      <div class="restaurant__img">
-                        <img src="../images/Maquettes Ohmyfood/images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
+                        <img src="./images/Maquettes Ohmyfood/images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
                         <p class="restaurant__article--new">Nouveau</p>
                      </div>
                      <div class="restaurant__texte">
@@ -70,9 +70,9 @@
                   </a>
                </article>
                <article class="restaurant__article">
-                  <a class="restaurant__nav" href="menu_la_note_enchantée.html">
+                  <a class="restaurant__nav" href="./html/menu_la_note_enchantée.html">
                      <div class="restaurant__img">
-                        <img src="../images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
+                        <img src="./images/Maquettes Ohmyfood/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée">
                         <p class="restaurant__article--new">Nouveau</p>
                      </div>
                      <div class="restaurant__texte">
@@ -85,9 +85,9 @@
                   </a>
                </article>
                <article class="restaurant__article">
-                  <a class="restaurant__nav" href="menu_a_la_française.html">
+                  <a class="restaurant__nav" href="./html/menu_a_la_française.html">
                      <div class="restaurant__img">
-                        <img src="../images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
+                        <img src="./images/Maquettes Ohmyfood/images/restaurants/a_la_française.jpg" alt="À la française">
                      </div>
                      <div class="restaurant__texte">
                         <h3>À la française</h3>
@@ -99,9 +99,9 @@
                   </a>
                </article>
                <article class="restaurant__article">
-                  <a class="restaurant__nav" href="menu_le_delice_des_sens.html">
+                  <a class="restaurant__nav" href="./html/menu_le_delice_des_sens.html">
                      <div class="restaurant__img">
-                        <img src="../images/Maquettes Ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
+                        <img src="./images/Maquettes Ohmyfood/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
                      </div>
                      <div class="restaurant__texte">
                         <h3>Le délice des sens</h3>
