--- a/html/menu_la_note_enchantée.html
+++ b/html/menu_la_note_enchantée.html
@@ -3,6 +3,7 @@
    <head>
       <title>La note enchantée</title>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
       <script
          src="https://kit.fontawesome.com/f3cd396271.js"
          crossorigin="anonymous"
@@ -24,9 +25,9 @@
                <i class="fas fa-heart" ></i>
             </div>
          </div>
-         <section class="menu">
+         <section id="menugrand" class="menu">
             <h4>ENTRÉES</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Ravioles de foie gras</h5>
                   <p>Accompagnés de leur crème à la truffe</p>
@@ -38,7 +39,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Caviar osciètre</h5>
                   <p>Sur blini à la farine de blé noir</p>
@@ -50,7 +51,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Homard et espuma de potiron</h5>
                   <p>Mariné aux zestes d'orange</p>
@@ -62,7 +63,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--4">
                <div class="menu__texte">
                   <h5>Foie gras de canard cuit entier</h5>
                   <p>Confiture de figue et pain toasté</p>
@@ -77,7 +78,7 @@
          </section>
          <section class="menu">
             <h4>PLATS</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Noix de coquilles Saint-Jacques</h5>
                   <p>Sur lit de purée de céleri-rave</p>
@@ -89,7 +90,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Langoustine poêlée</h5>
                   <p>Purée de patate douce</p>
@@ -101,7 +102,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Mijoté de queue de boeuf </h5>
                   <p>Et riz sauvage aux zestes de citron</p>
@@ -114,9 +115,9 @@
                </div>
             </article>
          </section>
-         <section class="menu">
+         <section id="menubouton" class="menu">
             <h4>DESSERTS</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Macaron noisette et chocolat</h5>
                   <p>Glace au caramel brun et sel de Guérande</p>
@@ -128,7 +129,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Baba au rhum revisité </h5>
                   <p>Avec son coulis de citron</p>
@@ -140,7 +141,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Tarte au citron meringuée</h5>
                   <p>Déstructurée</p>
