--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <title>OhMyFood!</title>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
       <script
          src="https://kit.fontawesome.com/f3cd396271.js"
          crossorigin="anonymous"
