--- a/html/menu_a_la_française.html
+++ b/html/menu_a_la_française.html
@@ -3,6 +3,7 @@
    <head>
       <title>À la française</title>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
       <script
          src="https://kit.fontawesome.com/f3cd396271.js"
          crossorigin="anonymous"
@@ -26,7 +27,7 @@
          </div>
          <section class="menu">
             <h4>ENTRÉES</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Tartare de poulpe acidulé</h5>
                   <p>Aux zestes d'orange</p>
@@ -38,7 +39,7 @@
                   <i class="fas fa-check-circle"></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Velouté de légumes d'antan</h5>
                   <p>Carotte, panais, topinambour</p>
@@ -50,7 +51,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Soupe à l'oignon</h5>
                   <p>Revisitée</p>
@@ -65,7 +66,7 @@
          </section>
          <section class="menu">
             <h4>PLATS</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Coquilles Saint-Jacques</h5>
                   <p>Accompagnées d'une purée de panais</p>
@@ -77,7 +78,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Magret de canard</h5>
                   <p>Et parmentier de pommes de terre</p>
@@ -89,7 +90,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Pigeonneau d’Ille-et-Vilaine</h5>
                   <p>Sur son lit de gnocchis aux légumes</p>
@@ -102,9 +103,9 @@
                </div>
             </article>
          </section>
-         <section class="menu">
+         <section id="menubouton" class="menu">
             <h4>DESSERTS</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Pétales de violettes glacés</h5>
                   <p>Et purée de noisettes</p>
@@ -116,7 +117,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Fondant au chocolat</h5>
                   <p>Revisité</p>
@@ -128,7 +129,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Millefeuille croustillant</h5>
                   <p>Myrtilles et pâte d’amande</p>
