--- a/html/menu_la_palette_du_gout.html
+++ b/html/menu_la_palette_du_gout.html
@@ -3,6 +3,7 @@
    <head>
       <title>La palette du goût</title>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
       <script
          src="https://kit.fontawesome.com/f3cd396271.js"
          crossorigin="anonymous"
@@ -26,7 +27,7 @@
          </div>
          <section class="menu">
             <h4>ENTRÉES</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Fricassée d'escargot</h5>
                   <p>Au piment d'Espelette</p>
@@ -38,7 +39,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Foie gras de canard mi-cuit</h5>
                   <p>Et ses copeaux de truffe noire</p>
@@ -50,7 +51,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Oeuf au plat</h5>
                   <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -65,7 +66,7 @@
          </section>
          <section class="menu">
             <h4>PLATS</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Filet de boeuf aux herbes</h5>
                   <p>Accompagné de sa ribambelle de légumes</p>
@@ -77,7 +78,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Parmentier de queue de boeuf</h5>
                   <p>À la truffe noire sur sa purée de panais</p>
@@ -89,7 +90,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Filet de turbot</h5>
                   <p>Aux agrumes</p>
@@ -102,9 +103,9 @@
                </div>
             </article>
          </section>
-         <section class="menu">
+         <section id="menubouton" class="menu">
             <h4>DESSERTS</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Paris-Brest</h5>
                   <p>Revisité</p>
@@ -116,7 +117,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Macaron au chocolat d'exception</h5>
                   <p>Et glace à la vanille de Madagascar</p>
@@ -128,7 +129,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Mousse au chocolat</h5>
                   <p>Au piment d'Espelette et à la truffe noire</p>
