--- a/html/menu_le_delice_des_sens.html
+++ b/html/menu_le_delice_des_sens.html
@@ -3,6 +3,7 @@
    <head>
       <title>Le délice des sens</title>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
       <script
          src="https://kit.fontawesome.com/f3cd396271.js"
          crossorigin="anonymous"
@@ -26,7 +27,7 @@
          </div>
          <section class="menu">
             <h4>ENTRÉES</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Tartare de thon</h5>
                   <p>Assaisonné au yuzu</p>
@@ -38,7 +39,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Bouchée de homard croustillant</h5>
                   <p>Et sa farandole de petits légumes</p>
@@ -50,7 +51,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Velouté de cèpes</h5>
                   <p>Aux truffes</p>
@@ -65,7 +66,7 @@
          </section>
          <section class="menu">
             <h4>PLATS</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Poulet rôti aux herbes de Provence</h5>
                   <p>Et sa crème de truffe</p>
@@ -77,7 +78,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Langouste rôtie </h5>
                   <p>Et ses légumes de saison</p>
@@ -89,7 +90,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Côte de boeuf Angus </h5>
                   <p>Et sa purée de panais</p>
@@ -102,9 +103,9 @@
                </div>
             </article>
          </section>
-         <section class="menu">
+         <section id="menubouton" class="menu">
             <h4>DESSERTS</h4>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--1">
                <div class="menu__texte">
                   <h5>Farandole de desserts</h5>
                   <p>Du chef</p>
@@ -116,7 +117,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--2">
                <div class="menu__texte">
                   <h5>Crème brulée </h5>
                   <p>Revisitée</p>
@@ -128,7 +129,7 @@
                   <i class="fas fa-check-circle" ></i>
                </div>
             </article>
-            <article class="menu__carte">
+            <article class="menu__carte menu__carte--3">
                <div class="menu__texte">
                   <h5>Tiramisu</h5>
                   <p>À la noisette</p>
